--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -133,7 +133,10 @@
           if (draggable.getBoundingClientRect().top < 0 && window.scrollY > 0) {
             window.scrollBy(0, -10);
           }
-          console.log(draggable.getBoundingClientRect().top );
+          console.log(Math.ceil(draggable.getBoundingClientRect().bottom), document.documentElement.clientHeight)
+          if (Math.ceil(draggable.getBoundingClientRect().bottom) > document.documentElement.clientHeight) {
+            window.scrollBy(0, +10);
+          }
           moveTo(e.clientX, e.clientY);
         }
 
