--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -130,10 +130,9 @@
         }
 
         function onMouseMove(e) {
-          if (draggable.getBoundingClientRect().top < 0 && window.scrollY > 0) {
+          if (draggable.getBoundingClientRect().top < 0) {
             window.scrollBy(0, -10);
           }
-          console.log(Math.ceil(draggable.getBoundingClientRect().bottom), document.documentElement.clientHeight)
           if (Math.ceil(draggable.getBoundingClientRect().bottom) > document.documentElement.clientHeight) {
             window.scrollBy(0, +10);
           }
