Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
@@ -99,6 +99,8 @@
         document.body.clientHeight, document.documentElement.clientHeight
       );
 
+      const windowHeight = document.documentElement.clientHeight;
+
       document.onmousedown = function(e) {
         e.preventDefault();
         
@@ -131,6 +133,7 @@
         }
 
         function onMouseMove(e) {
+          console.log(windowHeight);
           moveTo(e.clientX, e.clientY);
         }
 
