Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
@@ -126,14 +126,14 @@
         draggable.addEventListener("mousemove", onMouseMove);
 
         draggable.onmouseup = function(e) {
-          let top = e.pageY - shiftY;
-          draggable.style.position = "absolute";
+          let top = draggable.getBoundingClientRect().top + window.scrollY;
           draggable.style.top = top + "px";
+          draggable.style.position = "absolute";
           draggable.removeEventListener("mousemove", onMouseMove);
         }
 
         function onMouseMove(e) {
-          console.log(windowHeight);
+          console.log(windowHeight, docScrollHeight, draggable.getBoundingClientRect().bottom);
           moveTo(e.clientX, e.clientY);
         }
 
