--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/advanced-scrolling.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/advanced-scrolling.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <script>
-      console.log("Ola, tudo bem?");
+      document.onmousemove = function(e) {
+        console.log(e.clientY);
+      };
     </script>
   </body>
 </html>
