Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
@@ -138,7 +138,7 @@
 
         function moveTo(clientX, clientY) {
           let top = clientY - shiftY;
-          const draggableHeight = top + draggable.offsetHeight;
+          const draggableHeight = Math.round(top + draggable.offsetHeight);
           console.log(draggableHeight, windowHeight);
           draggable.style.left = clientX - shiftX + "px";
           draggable.style.top = top + "px";
