Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
@@ -139,19 +139,15 @@
         function moveTo(clientX, clientY) {
           let top = clientY - shiftY;
 
+          
+
           const draggableHeight = Math.round(top + draggable.offsetHeight);
 
           if (draggableHeight > windowHeight) {
             window.scrollBy(0, 10);
           }
 
-          docScrollHeight = Math.max(
-            document.body.scrollHeight, document.documentElement.scrollHeight,
-            document.body.offsetHeight, document.documentElement.offsetHeight,
-            document.body.clientHeight, document.documentElement.clientHeight
-          );
-
-          console.log(draggableHeight, docScrollHeight);
+          console.log(draggableHeight, docScrollHeight, window.scrollY + draggableHeight);
           draggable.style.left = clientX - shiftX + "px";
           draggable.style.top = top + "px";
         }
