Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
@@ -138,16 +138,16 @@
 
         function moveTo(clientX, clientY) {
           let top = clientY - shiftY;
-
-          
-
           const draggableHeight = Math.round(top + draggable.offsetHeight);
 
           if (draggableHeight > windowHeight) {
             window.scrollBy(0, 10);
           }
 
-          console.log(draggableHeight, docScrollHeight, window.scrollY + draggableHeight);
+          if (docScrollHeight < window.scrollY + draggableHeight) {
+            top = windowHeight - draggable.offsetHeight;
+          }
+
           draggable.style.left = clientX - shiftX + "px";
           draggable.style.top = top + "px";
         }
