Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
@@ -140,11 +140,12 @@
           let top = clientY - shiftY;
           const draggableHeight = Math.round(top + draggable.offsetHeight);
 
-          if (draggableHeight > windowHeight) {
-            window.scrollBy(0, 10);
+          if (docScrollHeight < window.scrollY + draggableHeight) {
+            top = windowHeight - draggable.offsetHeight;
           }
 
-          if (docScrollHeight < window.scrollY + draggableHeight) {
+          if (draggableHeight > windowHeight) {
+            window.scrollBy(0, 10);
             top = windowHeight - draggable.offsetHeight;
           }
 
