Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-2.html
@@ -140,6 +140,13 @@
           let top = clientY - shiftY;
           const draggableHeight = Math.round(top + draggable.offsetHeight);
 
+          // Scroll top handling
+          if (top < 0) {
+            top = 0;
+            console.log("Ola");
+            window.scrollBy(0, -10);
+          }
+
           // Scroll bottom handling
           if (docScrollHeight < window.scrollY + draggableHeight) {
             top = windowHeight - draggable.offsetHeight;
