Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -4,6 +4,7 @@
     <style></style>
   </head>
   <body>
+    <h2>Place superheroes around the soccer field.</h2>
     <script></script>
   </body>
 </html>
