--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -5,6 +5,32 @@
   </head>
   <body>
     <h2>Place superheroes around the soccer field.</h2>
+
+    <p>
+      Superheroes and the ball are elements with the class 
+      "draggable". Make them really draggable.
+    </p>
+
+    <p>
+      Important: limit dragging by the window. If a draggable reaches 
+      window top or bottom, then the page should scroll to let us drag 
+      it further.
+    </p>
+
+    <p>
+      If your screen is big enough to fit the whole document -- make 
+      the window smaller to get vertical scrolling, so that you could test it.
+    </p>
+
+    <p>
+      In this task it's enough to handle vertical scrolling. There's no 
+      horizontal scrolling usually, and it's handled the similar way if needed.
+    </p>
+
+    <p>
+      And one more thing: heroes may never leave the page. If they reach 
+      the edge of the document, no dragging outside of it.
+    </p>
     <script></script>
   </body>
 </html>
