Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -31,6 +31,20 @@
       And one more thing: heroes may never leave the page. If they reach 
       the edge of the document, no dragging outside of it.
     </p>
+
+    <div id="field"></div>
+
+    <div class="hero draggable" id="hero1"></div>
+    <div class="hero draggable" id="hero2"></div>
+    <div class="hero draggable" id="hero3"></div>
+    <div class="hero draggable" id="hero4"></div>
+    <div class="hero draggable" id="hero5"></div>
+    <div class="hero draggable" id="hero6"></div>
+
+    <img src="https://en.js.cx/clipart/ball.svg" class="draggable">
+
+    <div style="clear:both"></div>
+
     <script></script>
   </body>
 </html>
