--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -21,6 +21,7 @@
         width: 130px;
         height: 128px;
         float: left;
+        background-color: lightseagreen;
       }
 
       #hero1 {
