Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -95,6 +95,10 @@
 
     <div style="clear:both"></div>
 
-    <script></script>
+    <script>
+      document.addEventListener("mousedown", function(e) {
+        const draggable = e.target.closest(".draggable");
+      });
+    </script>
   </body>
 </html>
