Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -98,6 +98,13 @@
     <script>
       document.addEventListener("mousedown", function(e) {
         const draggable = e.target.closest(".draggable");
+        if (!draggable) return;
+
+        e.preventDefault();
+
+        draggable.ondragstart = function() {
+          return false;
+        }
       });
     </script>
   </body>
