Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -105,6 +105,8 @@
         draggable.ondragstart = function() {
           return false;
         }
+
+        let coords, shiftX, shiftY;
       });
     </script>
   </body>
