Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -123,13 +123,13 @@
 
         moveTo(e.clientX, e.clientY);
 
-        draggable.addEventListener("mousemove", onMouseMove);
+        document.addEventListener("mousemove", onMouseMove);
 
         draggable.onmouseup = function(e) {
           let top = draggable.getBoundingClientRect().top + window.scrollY;
           draggable.style.top = top + "px";
           draggable.style.position = "absolute";
-          draggable.removeEventListener("mousemove", onMouseMove);
+          document.removeEventListener("mousemove", onMouseMove);
         }
 
         function onMouseMove(e) {
