Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -117,6 +117,15 @@
 
           isDragging = true;
 
+          document.addEventListener("mousemove", onMouseMove);
+          draggable.addEventListener("mouseup", onMouseUp);
+
+          function onMouseMove(e) {
+            console.log(e.type);
+          }
+
+          function onMouseUp(e) {}
+
           console.log(elem.nodeName, clientX, clientY);
         }
       });
