Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -120,14 +120,19 @@
           document.addEventListener("mousemove", onMouseMove);
           draggable.addEventListener("mouseup", onMouseUp);
 
-          function onMouseMove(e) {
-            console.log(e.type);
-          }
+          shiftX = e.clientX - draggable.getBoundingClientRect().left;
+          shiftY = e.clientY - draggable.getBoundingClientRect().top;
 
-          function onMouseUp(e) {}
+          draggable.style.position = "fixed";
 
-          console.log(elem.nodeName, clientX, clientY);
+          moveTo(clientX, clientY);
         }
+
+        function onMouseMove(e) {
+          console.log(e.type);
+        }
+
+        function onMouseUp(e) {}
       });
     </script>
   </body>
