--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field.html
@@ -119,7 +119,7 @@
 
         document.body.append(draggable);
         draggable.style.position = "fixed";
-        draggable.style.zIndex = 1000;
+        // draggable.style.zIndex = 1000;
 
         moveTo(e.clientX, e.clientY);
 
