Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -133,6 +133,10 @@
         }
 
         function onMouseUp(e) {}
+
+        function moveTo(clientX, clientY) {
+          
+        }
       });
     </script>
   </body>
