Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -112,6 +112,7 @@
 
         startDrag(draggable, e.clientX, e.clientY);
 
+        // Runs once
         function startDrag(elem, clientX, clientY) {
           if (isDragging) return;
 
@@ -134,9 +135,7 @@
 
         function onMouseUp(e) {}
 
-        function moveTo(clientX, clientY) {
-          
-        }
+        function moveTo(clientX, clientY) { }
       });
     </script>
   </body>
