Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -133,7 +133,13 @@
           console.log(e.type);
         }
 
-        function onMouseUp(e) {}
+        function onMouseUp(e) {
+          finishDrag();
+        }
+
+        function finishDrag() {
+          
+        }
 
         function moveTo(clientX, clientY) { }
       });
