Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -138,7 +138,14 @@
         }
 
         function finishDrag() {
-          
+          if (!isDragging) return;
+
+          isDragging = false;
+
+          draggable.style.top = parseInt(draggable.style.top) + window.pageYOffset + "px";
+          draggable.style.position = "absolute";
+          document.removeEventListener("mousemove", onMouseMove);
+          draggable.removeEventListener("mouseup", onMouseUp);
         }
 
         function moveTo(clientX, clientY) { }
