Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -130,7 +130,7 @@
         }
 
         function onMouseMove(e) {
-          console.log(e.type);
+          moveTo(e.clientX, e.clientY);
         }
 
         function onMouseUp(e) {
