Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -149,7 +149,13 @@
           // draggable.removeEventListener("mouseup", onMouseUp);
         }
 
-        function moveTo(clientX, clientY) { }
+        function moveTo(clientX, clientY) { 
+          let newX = clientX - shiftX;
+          let newY = clientY - shiftY;
+
+          const newBottom = newY + draggable.offsetHeight;
+          console.log(newBottom);
+        }
       });
     </script>
   </body>
