Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -154,7 +154,17 @@
           let newY = clientY - shiftY;
 
           const newBottom = newY + draggable.offsetHeight;
-          console.log(newBottom);
+
+          if (newBottom > document.documentElement.clientHeight) {
+            // window-relative coordinate of document end
+            const docBottom = document.documentElement.getBoundingClientRect().bottom;
+
+            let scrollY = Math.min(docBottom - newBottom, 10);
+
+            if (scrollY < 0) scrollY = 0;
+
+            window.scrollBy(0, scrollY);
+          }
         }
       });
     </script>
