Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -164,6 +164,8 @@
             if (scrollY < 0) scrollY = 0;
 
             window.scrollBy(0, scrollY);
+
+            newY = Math.min(newY, document.documentElement.clientHeight - draggable.offsetHeight);
           }
         }
       });
