Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -167,6 +167,15 @@
 
             newY = Math.min(newY, document.documentElement.clientHeight - draggable.offsetHeight);
           }
+
+          if (newY < 0) {
+            let scrollY = Math.min(-newY, 10);
+            if (scrollY < 0) scrollY = 0;
+
+            window.scrollBy(0, -scrollY);
+
+            newY = Math.max(newY, 0);
+          }
         }
       });
     </script>
