Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -180,8 +180,8 @@
           // limit the new X within the window boundaries
           // there's no scroll here so it's simple
           if (newX < 0) newX = 0;
-          if (newX > document.documentElement.clientWidth - dragElement.offsetWidth) {
-            newX = document.documentElement.clientWidth - dragElement.offsetWidth;
+          if (newX > document.documentElement.clientWidth - draggable.offsetWidth) {
+            newX = document.documentElement.clientWidth - draggable.offsetWidth;
           }
         }
       });
