Drag and drop with mouse events

--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -183,6 +183,9 @@
           if (newX > document.documentElement.clientWidth - draggable.offsetWidth) {
             newX = document.documentElement.clientWidth - draggable.offsetWidth;
           }
+
+          draggable.style.left = newX + "px";
+          draggable.style.top = newY + "px";
         }
       });
     </script>
