--- a/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
+++ b/part-2-browser-document-events-interfaces/ui-events/drag-n-drop-with-mouse-events/tasks/drag-superheroes-around-the-field-other-version.html
@@ -54,7 +54,7 @@
     </style>
   </head>
   <body>
-    <h2>Place superheroes around the soccer field.</h2>
+    <h2>Place superheroes around the soccer field other version</h2>
 
     <p>
       Superheroes and the ball are elements with the class 
@@ -138,15 +138,14 @@
         }
 
         function finishDrag() {
-          // console.log("up");
-          // if (!isDragging) return;
+          if (!isDragging) return;
 
-          // isDragging = false;
+          isDragging = false;
 
-          // draggable.style.top = parseInt(draggable.style.top) + window.pageYOffset + "px";
-          // draggable.style.position = "absolute";
-          // document.removeEventListener("mousemove", onMouseMove);
-          // draggable.removeEventListener("mouseup", onMouseUp);
+          draggable.style.top = parseInt(draggable.style.top) + window.pageYOffset + "px";
+          draggable.style.position = "absolute";
+          document.removeEventListener("mousemove", onMouseMove);
+          draggable.removeEventListener("mouseup", onMouseUp);
         }
 
         function moveTo(clientX, clientY) { 
