--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
+  <style>
+    .flex {
+      display: flex;
+    }
+
+    span {
+      background-color: lightpink;
+      margin-right: 12px;
+    }
+  </style>
   <body>
+    <h2>Pointer events</h2>
+    <div class="flex">
+      <span>Pointerover</span>
+      <span>Pointerover</span>
+    </div>
     <script>
       console.log("Ola, tudo bem?");
     </script>
