--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -13,7 +13,7 @@
   <body>
     <h2>Pointer events</h2>
     <div class="flex">
-      <span>Pointerover</span>
+      <span onpointerover="console.log(event.type)">Pointerover</span>
       <span>Pointerover</span>
     </div>
     <script>
