--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -14,7 +14,7 @@
     <h2>Pointer events</h2>
     <div class="flex">
       <span onpointerover="console.log(event.type)">Pointerover</span>
-      <span>Pointerover</span>
+      <span onpointerout="console.log(event.type)">Pointerout</span>
     </div>
     <script>
       console.log("Ola, tudo bem?");
