--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -15,6 +15,7 @@
     <div class="flex">
       <span onpointerover="console.log(event.type)">Pointerover</span>
       <span onpointerout="console.log(event.type)">Pointerout</span>
+      <span onpointerdown="console.log(event.type)">Pointerdown</span>
     </div>
     <script>
       console.log("Ola, tudo bem?");
