--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -16,6 +16,7 @@
       <span onpointerover="console.log(event.type)">Pointerover</span>
       <span onpointerout="console.log(event.type)">Pointerout</span>
       <span onpointerdown="console.log(event.type)">Pointerdown</span>
+      <span onpointerup="console.log(event.type)">Pointerup</span>
     </div>
     <script>
       console.log("Ola, tudo bem?");
