--- a/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
+++ b/part-2-browser-document-events-interfaces/ui-events/pointer-events/index.html
@@ -17,7 +17,9 @@
       <span onpointerout="console.log(event.type)">Pointerout</span>
       <span onpointerdown="console.log(event.type)">Pointerdown</span>
       <span onpointerup="console.log(event.type)">Pointerup</span>
+      <span onpointerenter="console.log(event.type)">Pointerenter</span>
     </div>
+
     <script>
       console.log("Ola, tudo bem?");
     </script>
